# mantis_examples

./: CMakeLists.txt  LICENSE  README.md  source.rc
basic/: HelloMantis  HelloMantis.c  Makefile  MantisAPI.py  README.md
capi/: CMakeLists.txt  Superbuild.cmake
capi/basic/: GetClipList.c  GetClipMcamImages.c  HelloMantis.c  Makefile  MantisExportStream.c  MantisGetFrames  MantisGetFrames.c  MantisRecord.c  MantisSetExposures.c  McamGetTimeCodes.cpp  McamStream  McamStream.c  README.md  SaveClip.c
capi/cmake/: .FindOpenCV.cmake.swp  FindMantisAPI.cmake  FindOpenCV.cmake
capi/focus/: Assisted_FocusOverlay.cpp  Evetar_AutoFocus  Evetar_AutoFocus.cpp  Leopard_AutoFocus.cpp  Makefile  Mantis_Camera_Focus.cpp  README.md  focustmp.json  frame.json
capi/globalWB/: Makefile  MantisSetExposures.c  MantisSetGlobalWhiteBalanceAndExposure.c
python/PyCamViewer/: PyCamViewer.py  pcvform.py  pcvform.ui
python/basic/: ConnectToCamera.py  GetFrames.py  SetupStream.py
